Changed Stack.java